--- a/.github/workflows/django_tests.yml
+++ b/.github/workflows/django_tests.yml
@@ -46,38 +46,38 @@ jobs:
     
     - name: Start containers with docker-compose
       run: |
-        docker-compose up -d
+        docker compose up -d
         
     - name: Wait for MySQL to be ready
       run: |
-        docker-compose exec -T db sh -c 'while ! mysqladmin ping -h localhost -u django_user -p"$DB_PASSWORD" --silent; do sleep 1; done'
+        docker compose exec -T db sh -c 'while ! mysqladmin ping -h localhost -u django_user -p"$DB_PASSWORD" --silent; do sleep 1; done'
       env:
         DB_PASSWORD: django_pass
     
     - name: Install dependencies in container
       run: |
-        docker-compose exec -T web pip install coverage
+        docker compose exec -T web pip install coverage
     
     - name: Run migrations in container
       run: |
-        docker-compose exec -T web sh -c 'cd /app/Projeto_1_Nuvem && python manage.py migrate'
+        docker compose exec -T web sh -c 'cd /app/Projeto_1_Nuvem && python manage.py migrate'
     
     - name: Run Unit Tests
       run: |
-        docker-compose exec -T web sh -c 'cd /app/Projeto_1_Nuvem && python manage.py test users.test_models transactions.test_models users.test_views transactions.test_views --verbosity=2'
+        docker compose exec -T web sh -c 'cd /app/Projeto_1_Nuvem && python manage.py test users.test_models transactions.test_models users.test_views transactions.test_views --verbosity=2'
     
     - name: Run Integration Tests
       run: |
-        docker-compose exec -T web sh -c 'cd /app/Projeto_1_Nuvem && python manage.py test test_integration test_additional_integration --verbosity=2'
+        docker compose exec -T web sh -c 'cd /app/Projeto_1_Nuvem && python manage.py test test_integration test_additional_integration --verbosity=2'
     
     - name: Run tests with coverage
       run: |
-        docker-compose exec -T web sh -c 'cd /app/Projeto_1_Nuvem && coverage run --source="." manage.py test && coverage report && coverage xml'
+        docker compose exec -T web sh -c 'cd /app/Projeto_1_Nuvem && coverage run --source="." manage.py test && coverage report && coverage xml'
     
     - name: Copy coverage report from container
       if: always()
       run: |
-        docker-compose cp web:/app/Projeto_1_Nuvem/coverage.xml ./coverage.xml || true
+        docker compose cp web:/app/Projeto_1_Nuvem/coverage.xml ./coverage.xml || true
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
@@ -98,4 +98,4 @@ jobs:
     - name: Stop and clean up containers
       if: always()
       run: |
-        docker-compose down -v
+        docker compose down -v
