--- a/.github/workflows/django_tests.yml
+++ b/.github/workflows/django_tests.yml
@@ -37,11 +37,11 @@ jobs:
       run: |
         docker compose up -d
     
-    - name: Wait for MySQL to be ready
+    - name: Wait for MySQL to be ready (improved)
       run: |
         for i in {1..30}; do
           echo "Tentativa $i/30..."
-          docker compose exec -T db sh -c 'nc -z localhost 3306 && echo "MySQL ready"' && break
+          docker compose exec -T db mysqladmin ping -h localhost -u root -p"$MYSQL_ROOT_PASSWORD" && break
           sleep 2
         done
       timeout-minutes: 2
@@ -51,19 +51,9 @@ jobs:
         docker compose exec -T web sh -c 'for i in {1..20}; do python manage.py check && break || (echo "Tentativa $i/20" && sleep 2); done'
       timeout-minutes: 2
     
-    - name: Grant permissions to Django user
+    - name: Install dependencies in container
       run: |
-        docker compose exec -T db mysql -h localhost -u root -p"your_root_password" << EOF
-        GRANT ALL PRIVILEGES ON \`${DB_NAME}\`.* TO '${DB_USER}'@'%';
-        GRANT ALL PRIVILEGES ON \`test_${DB_NAME}\`.* TO '${DB_USER}'@'%';
-        GRANT ALL PRIVILEGES ON \`${DB_NAME}\`.* TO '${DB_USER}'@'localhost';
-        GRANT ALL PRIVILEGES ON \`test_${DB_NAME}\`.* TO '${DB_USER}'@'localhost';
-        FLUSH PRIVILEGES;
-        EOF
-      env:
-        DB_NAME: Django_APP
-        DB_USER: django
-      timeout-minutes: 1
+        docker compose exec -T web pip install coverage
     
     - name: Run migrations in container
       run: |
