--- a/.github/workflows/django_tests.yml
+++ b/.github/workflows/django_tests.yml
@@ -51,9 +51,19 @@ jobs:
         docker compose exec -T web sh -c 'for i in {1..20}; do python manage.py check && break || (echo "Tentativa $i/20" && sleep 2); done'
       timeout-minutes: 2
     
-    - name: Install dependencies in container
+    - name: Grant permissions to Django user
       run: |
-        docker compose exec -T web pip install coverage
+        docker compose exec -T db mysql -h localhost -u root -p"your_root_password" << EOF
+        GRANT ALL PRIVILEGES ON \`${DB_NAME}\`.* TO '${DB_USER}'@'%';
+        GRANT ALL PRIVILEGES ON \`test_${DB_NAME}\`.* TO '${DB_USER}'@'%';
+        GRANT ALL PRIVILEGES ON \`${DB_NAME}\`.* TO '${DB_USER}'@'localhost';
+        GRANT ALL PRIVILEGES ON \`test_${DB_NAME}\`.* TO '${DB_USER}'@'localhost';
+        FLUSH PRIVILEGES;
+        EOF
+      env:
+        DB_NAME: Django_APP
+        DB_USER: django
+      timeout-minutes: 1
     
     - name: Run migrations in container
       run: |
