fix: add missing file copy step for default image in Docker workflow

--- a/.github/workflows/django_tests.yml
+++ b/.github/workflows/django_tests.yml
@@ -36,6 +36,7 @@ jobs:
     - name: Start containers with docker-compose
       run: |
         docker compose up -d
+        docker cp ./app/Projeto_1_Nuvem/default.jpg coinflip_web:/app/mediafiles/default.jpg
     
     - name: Wait for MySQL to be ready
       run: |
